# spark-claude

./: .gitignore  00-SPARK-HISTORY-INDEX.md  01G-00_core_definition_guide.md  AGENT_DEFINITION_STANDARD.md  CLAUDE.html  CLAUDE.md  HANDOVER_archive-curator.md  LICENSE  PR_TEMPLATE.md  README.md  README_DATA_FLOW_DEMO.md  ROADMAP.md  SIMULTANEOUS_TASK_IMPLEMENTATION.md  SPARK_GLOBAL_GUIDE_FOR_CLAUDE_MD.md  SPARK_SUBAGENT_DISCOVERY_JOURNEY.md  SPARK체계_ 통합_설계안.md  archive  convert_agents_to_txt.py  coverage.json  install.sh  pyproject.toml  requirements.txt  setup-spark-commands.sh  spark-convert-agents  spark-convert-commands  v1.0-SuperClaude-Analysis.md  연구요청서_1호_실무적용연구.md  연구요청서_1호_아카이브온톨로지.md  연구요청서_제이_문서분류체계.md  연구요청서_제이_아카이브온톨로지.md
.claude/: AGENT_REDESIGN_PLAN.md  CLAUDE.md  SPARK_CONSTITUTION.md  claude_desktop.json  settings.json  settings.local.json  spark_full_documentation.txt
.history/: CLAUDE_20251114094504.md  CLAUDE_20251114094603.md
SPARK/: README.md
agents/: auditor.md  diagnostician.md  implementer.md  surgeon.md  surveyor.md
benchmarks/: compare_performance.py
docs/: 01_DNA_Agent_Integrated_Process_Flow.txt  02_DNA_ALL_GUIDES_MERGED.txt  03G-00_adr_guide.md  03_analyzer-spark.txt  04_DNA_18_Combinations_Validation.txt  06G-00_standards_guide.md  09G-00_governance_guide.md  20251112_task_conversation.txt  8-step-quality-gates-mandatory.md  9-step-quality-gates-with-architecture.md  AGENTS.md  ANTHROPIC_GUIDELINES.md  ANTHROPIC_PERSONA_RESEARCH.md  ARCHITECTURE.md  ARCHITECTURE_THEORY_MAPPING.md  Agent_페르소나_정의의_발전과정.md  BLUEPRINT_GUIDE.md  CHECKLIST_GUIDE.md  CLAUDE_CODE_GUIDELINES.md  CLAUDE_CODE_HOOKS_AND_AGENTS.md  CLAUDE_CODE_PLUGIN_ARCHITECTURE.md  CORE_METHODOLOGY.md  DEVELOPMENT.md  DNA_ALL_GUIDES_MERGED.md  DNA_Agent_Integrated_Process_Flow.md  DNA_Agent_Integrated_Process_Flow_v2.md  DNA_Agent_System_Design_for_Gemini_Review.md  ENTERPRISE_INITIATION_PROCESS.md  FIX_DEPLOYMENT_GUIDE.md  GUIDE_GAP_ANALYSIS.md  HomeDIR_CLAUDE.md  INSTALLATION.md  INSTALLATION_GUIDE.md  INSTALLATION_GUIDE_EN.md  MULTI_IMPLEMENT_GUIDE.md  PRACTICAL_PERSONA_GUIDE.md  README.md  SIMULTANEOUS_TASK_CALLING.md  SPARK_AGENTS_GUIDE.md  SPARK_AGENTS_MEMORY_REFERENCE.md  (+29 more)
examples/: data_flow_example.py  fibonacci_calculator.py
gift-for-dna/: README.md  surgeon-spark.md
gift-from-dna/: README.md
scripts/: batch_update_agents.sh  install.sh  install_ko.sh  uninstall.sh  uninstall_ko.sh  update_all_agents.py
spark-agents/: analyzer-spark.md  builder-spark.md  cleaner-spark.md  designer-spark.md  documenter-spark.md  estimator-spark.md  explainer-spark.md  gitter-spark.md  implementer-spark.md  improver-spark.md  indexer-spark.md  loader-spark.md  spawner-spark.md  tasker-spark.md  tester-spark.md  troubleshooter-spark.md
spark-hooks/: spark_persona_router.py  spark_quality_gates.py  (+1 more)
(+404 files in other folders)
